feat: Database Table Creation for User role and permissions

--- a/InitProjectVerticalSlice/appsettings.Development.json
+++ b/InitProjectVerticalSlice/appsettings.Development.json
@@ -2,12 +2,12 @@
   "ApiSettings": {
     "Secret": "0XRKGa53iF1katYZVWvySs7oBxeSeS8r"
   },
-  //"ConnectionStrings": {
-  //  "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS;Database=Test;TrustServerCertificate=True;Trusted_Connection=True;"
-  //},
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=sadevnet.ddns.net,49170;Database=Dev_EventEchos;User ID=Developer;Password=12345678;TrustServerCertificate=True"
+    "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS;Database=Test;TrustServerCertificate=True;Trusted_Connection=True;"
   },
+  //"ConnectionStrings": {
+  //  "DefaultSQLConnection": "Server=sadevnet.ddns.net,49170;Database=Dev_EventEchos;User ID=Developer;Password=12345678;TrustServerCertificate=True"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
