--- a/InitProjectVerticalSlice/appsettings.Development.json
+++ b/InitProjectVerticalSlice/appsettings.Development.json
@@ -13,5 +13,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "UploadDirectory": "D:\\Career\\Projects\\photography collection project\\app_image_storage\\"
 }
