add: prod settings

--- a/InitProjectVerticalSlice/appsettings.Development.json
+++ b/InitProjectVerticalSlice/appsettings.Development.json
@@ -14,5 +14,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UploadDirectory": "D:\\Career\\Projects\\photography collection project\\app_image_storage\\"
+  "UploadDirectory": "D:\\Career\\Projects\\EventEchos\\app_image_storage"
 }
