--- a/InitProjectVerticalSlice/appsettings.json
+++ b/InitProjectVerticalSlice/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS;Database=Test;TrustServerCertificate=True;Trusted_Connection=True;"
+  },
+  //"ConnectionStrings": {
+  //  "DefaultSQLConnection": "Server=sadevnet.ddns.net,49170;Database=Dev_EventEchos;User ID=Developer;Password=12345678;TrustServerCertificate=True"
+  //},
+  "UploadDirectory": "D:\\Career\\Projects\\EventEchos\\app_image_storage"
 }
