--- a/InitProjectVerticalSlice/appsettings.json
+++ b/InitProjectVerticalSlice/appsettings.json
@@ -12,5 +12,5 @@
   //"ConnectionStrings": {
   //  "DefaultSQLConnection": "Server=sadevnet.ddns.net,49170;Database=Dev_EventEchos;User ID=Developer;Password=12345678;TrustServerCertificate=True"
   //},
-  "UploadDirectory": "D:\\Career\\Projects\\EventEchos\\app_image_storage"
+  "UploadDirectory": "C:\\Users\\samee\\Downloads\\abc\\"
 }
