--- a/InitProjectVerticalSlice/appsettings.json
+++ b/InitProjectVerticalSlice/appsettings.json
@@ -1,16 +1,21 @@
 {
+  "ApiSettings": {
+    "Secret": "0XRKGa53iF1katYZVWvySs7oBxeSeS8r"
+  },
+  //"ConnectionStrings": {
+  //  "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS;Database=Test;TrustServerCertificate=True;Trusted_Connection=True;"
+  //},
+  //"ConnectionStrings": {
+  //  "DefaultSQLConnection": "Server=localhost,49170\\SQLEXPRESS;Database=EventEchos_Dev;TrustServerCertificate=True;Trusted_Connection=True;"
+  //},
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=localhost,49170;Database=EventEchos_Dev;User Id=sa;Password=123456;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS;Database=Test;TrustServerCertificate=True;Trusted_Connection=True;"
-  },
-  //"ConnectionStrings": {
-  //  "DefaultSQLConnection": "Server=sadevnet.ddns.net,49170;Database=Dev_EventEchos;User ID=Developer;Password=12345678;TrustServerCertificate=True"
-  //},
-  "UploadDirectory": "C:\\Users\\samee\\Downloads\\abc\\"
+  "UploadDirectory": "C:\\Users\\samee\\Downloads\\abc"
 }
